@@ -151,3 +151,7 @@ REPLACE INTO `command` (`name`, `security`, `help`) VALUES
 -- Add AutoBanned Passive Anticheat System!
 REPLACE INTO `trinity_string` (`entry`, `content_default`, `content_loc1`, `content_loc2`, `content_loc3`, `content_loc4`, `content_loc5`, `content_loc6`, `content_loc7`, `content_loc8`) VALUES
 (11002, '|cFFFFFC00[ANTICHEAT]|cFF00FFFF[|cFF60FF00%s|cFF00FFFF] Banned for cheating!|r', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL);
+
+-- Fix [Warrior] T10 4P Bonus.
+DELETE FROM spell_script_names WHERE spell_id = 46916;
+INSERT INTO spell_script_names VALUES (46916,'spell_warr_slam');
